--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -24,6 +24,30 @@ th, td, tr {
   width: 100%;
 }
 
+#pageSelectorContainer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 50%;
+}
+
+.inline{
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  justify-content: space-around;
+  width: 35%;
+  margin: auto;
+}
+
+#pageSelector {
+  background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
+  height: 29px;
+  overflow: hidden;
+  width: 70px;
+}
+
 #results{
 
 }
