--- a/src/components/DataList/DataList.scss
+++ b/src/components/DataList/DataList.scss
@@ -15,6 +15,35 @@ th, td, tr {
   //display
 }
 
+#createButton{
+  display:flex;
+  align-self: flex-start;
+  margin-left: 30px;
+  margin-bottom: 30px;
+
+  -moz-box-shadow: inset 0 0 0 1px #63ad0d;
+  -webkit-box-shadow: inset 0 0 0 1px #63ad0d;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  background: #eee;
+  background: -webkit-gradient(linear, 0 0, 0 bottom, from(#eee), to(#e2e2e2));
+  background: -moz-linear-gradient(#eee, #e2e2e2);
+  background: linear-gradient(#eee, #e2e2e2);
+  border: solid 1px #d0d0d0;
+  border-bottom: solid 3px #b2b1b1;
+  border-radius: 3px;
+  box-shadow: inset 0 0 0 1px #f5f5f5;
+  color: #555;
+  //display: inline-block;
+  font: bold 12px Arial, Helvetica, Clean, sans-serif;
+  margin: 0 25px 25px 0;
+  padding: 10px 20px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #fafafa; }
+
+
 .headers{
   background-color: #4CAF50;
   color: white;
