--- a/src/components/DataList/DataList.html
+++ b/src/components/DataList/DataList.html
@@ -7,101 +7,105 @@
     <section class="data-list"
              v-else
 
->
-    <AlertModal :displayAlert="displayAlert"/>
+    >
+        <AlertModal :displayAlert="displayAlert"/>
 
 
+        <div style="overflow-x:auto;">
+            <!--TODO: GENERALIZE EVERYWHERE AND MAKE A WISH, FIRST HOME MADE VUE COMPONENT :)-->
+            <MainButton
+                    :label="'Ajouter une intervention'"
+                    :eventKey="'addIntervention'"
+                    @addIntervention="activateCreationMode"
+            />
 
-    <div style="overflow-x:auto;">
-        <!--TODO: GENERALIZE EVERYWHERE AND MAKE A WISH, FIRST HOME MADE VUE COMPONENT :)-->
-        <MainButton
-                :label="'Ajouter une intervention'"
-                :eventKey="'addIntervention'"
-                @addIntervention="activateCreationMode"
-        />
-
-        <!--Would be cool to select his own elements-->
-        <!--<tr >-->
-        <!--<td v-for="key in headerArray">-->
-        <!--<p>{{key}}</p>-->
-        <!--<input  type="checkbox"/>-->
-        <!--</td>-->
-        <!--</tr>-->
+            <div id="searchContainer">
+                <font-awesome-icon icon="search"/>
+                <input style="margin-left: 10px; margin-right:10px" placeholder="Rechercher" v-model="globalSearch"/>
+                <font-awesome-icon v-if="globalSearch !== null" icon="times" @click="globalSearch=null"/>
+            </div>
+            <!--Would be cool to select his own elements-->
+            <!--<tr >-->
+            <!--<td v-for="key in headerArray">-->
+            <!--<p>{{key}}</p>-->
+            <!--<input  type="checkbox"/>-->
+            <!--</td>-->
+            <!--</tr>-->
 
 
-        <table>
-            <!--
-                <tr> </tr>: indique le début et la fin d'une ligne du tableau ;
+            <table>
+                <!--
+                    <tr> </tr>: indique le début et la fin d'une ligne du tableau ;
 
-                <td> </td>: indique le début et la fin du contenu d'une cellule.
-            -->
-            <tr class="headers" style="flex:1; justify-content: space-around;">
-                <td v-for="key in headerArray">
-                    <b-button type="button" @click="changeOrder(key)">{{getLabel(key)}}</b-button>
-                </td>
-            </tr>
-            <tr>
-                <td v-for="(key,index) in headerArray">
-                    <input class="searchFields" v-model="searchFields[index]"/>
-                </td>
-            </tr>
-            <tr class="results" v-for="element in filteredInterventions">
-                <td v-for="value, index in element">
-                    <p
-                            v-if="index === 'reference' ||
+                    <td> </td>: indique le début et la fin du contenu d'une cellule.
+                -->
+                <tr class="headers" style="flex:1; justify-content: space-around;">
+                    <td v-for="key in headerArray">
+                        <b-button type="button" @click="changeOrder(key)">{{getLabel(key)}}</b-button>
+                    </td>
+                </tr>
+                <tr>
+                    <td v-for="(key,index) in headerArray">
+                        <input class="searchFields" v-model="searchFields[index]"/>
+                    </td>
+                </tr>
+                <tr class="results" v-for="element in filteredInterventions">
+                    <td v-for="value, index in element">
+                        <p
+                                v-if="index === 'reference' ||
                             interventionToEdit.reference !== element.reference ||
                              (fieldToEdit !== null && fieldToEdit !== index)"
-                            @dblclick="singleEdit(element.reference,index)">
-                        {{value}}
-                    </p>
-                    <input
-                            v-else-if="interventionToEdit.reference === element.reference && fieldToEdit === index"
-                            v-model="interventionToEdit[index]"
-                            @blur="validateChanges"
-                    />
-                    <input v-else v-model="interventionToEdit[index]"/>
+                                @dblclick="singleEdit(element.reference,index)">
+                            {{value}}
+                        </p>
+                        <input
+                                v-else-if="interventionToEdit.reference === element.reference && fieldToEdit === index"
+                                v-model="interventionToEdit[index]"
+                                @blur="validateChanges"
+                        />
+                        <input v-else v-model="interventionToEdit[index]"/>
 
-                </td>
-                <div v-if="interventionToEdit.reference !== element.reference" class="actionContainer">
-                    <p class="actionItems" @click="setDetailsIntervention(element.reference)">
-                        <font-awesome-icon icon="info-circle"/>
-                    </p>
-                    <p class="actionItems" @click="fastEdit(element.reference)">
-                        <font-awesome-icon icon="pen"/>
-                    </p>
-                    <p class="actionItems" @click="askForDeletion(element.reference)">
-                        <font-awesome-icon icon="trash-alt"/>
-                    </p>
-                </div>
-                <div v-else class="actionContainer">
-                    <p class="actionItems" @click="validateChanges">
-                        <font-awesome-icon icon="check"/>
-                    </p>
-                    <p class="actionItems" @click="cancelChanges">
-                        <font-awesome-icon icon="times"/>
-                    </p>
-                </div>
-            </tr>
+                    </td>
+                    <div v-if="interventionToEdit.reference !== element.reference" class="actionContainer">
+                        <p class="actionItems" @click="setDetailsIntervention(element.reference)">
+                            <font-awesome-icon icon="info-circle"/>
+                        </p>
+                        <p class="actionItems" @click="fastEdit(element.reference)">
+                            <font-awesome-icon icon="pen"/>
+                        </p>
+                        <p class="actionItems" @click="askForDeletion(element.reference)">
+                            <font-awesome-icon icon="trash-alt"/>
+                        </p>
+                    </div>
+                    <div v-else class="actionContainer">
+                        <p class="actionItems" @click="validateChanges">
+                            <font-awesome-icon icon="check"/>
+                        </p>
+                        <p class="actionItems" @click="cancelChanges">
+                            <font-awesome-icon icon="times"/>
+                        </p>
+                    </div>
+                </tr>
 
 
-        </table>
+            </table>
 
-    </div>
-    <!--<PageSelector :maxItems="dataLength" v-model="numberPerPage" :numberPerPage="numberPerPage"/>-->
-    <div class="inline">
-        <div id="pageSelectorContainer">
-
-            <select id="pageSelector" v-model="numberPerPage">
-                <option v-for="item in dataLength">{{item}}</option>
-            </select>
-            <p>résultats par page</p>
         </div>
-    </div>
-    <p>{{dataLength}} résultat(s)</p>
-    <p>page {{page +1}} / {{Math.ceil(this.dataLength / this.numberPerPage)}}</p>
-    <button type="button" @click="changePage('first')">première page</button>
-    <button type="button" @click="changePage('previous')">page precedente</button>
-    <button type="button" @click="changePage('next')">page suivante</button>
-    <button type="button" @click="changePage('last')">dernière page</button>
-</section>
+        <!--<PageSelector :maxItems="dataLength" v-model="numberPerPage" :numberPerPage="numberPerPage"/>-->
+        <div class="inline">
+            <div id="pageSelectorContainer">
+
+                <select id="pageSelector" v-model="numberPerPage">
+                    <option v-for="item in dataLength">{{item}}</option>
+                </select>
+                <p>résultats par page</p>
+            </div>
+        </div>
+        <p>{{dataLength}} résultat(s)</p>
+        <p>page {{page +1}} / {{Math.ceil(this.dataLength / this.numberPerPage)}}</p>
+        <button type="button" @click="changePage('first')">première page</button>
+        <button type="button" @click="changePage('previous')">page precedente</button>
+        <button type="button" @click="changePage('next')">page suivante</button>
+        <button type="button" @click="changePage('last')">dernière page</button>
+    </section>
 </div>
